tests/machine/x/ocaml/append_builtin.ml
let a = [1;2]

let () =
  print_endline (a @ [3])
